# python-boilerplate

./: .gitignore  Makefile  pyproject.toml
.github/: copilot-instructions.md
src/api/: __init__.py  api.py  server.py
